dispatch-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch-service
  template:
    metadata:
      labels:
        app: dispatch-service
    spec:
      containers:
        - name: dispatch-service
          image: dispatch-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          readinessProbe:
            httpGet:
              path: /dispatch-service/actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /dispatch-service/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes: # Add volumes section
        - name: config-volume
          configMap:
            # reference the ConfigMap name created in step 1
            name: dispatch-service-config
