dispatch-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch-service
spec:
  selector:
    app: dispatch-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
