dispatch-service/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.com
      http:
        paths:
          - path: /dispatch-service
            pathType: Prefix
            backend:
              service:
                name: dispatch-service
                port:
                  number: 8080
